--- a/QLSP.css
+++ b/QLSP.css
@@ -5,6 +5,21 @@ body{
 .lo-go{
     width: 150px;
 }
+.avatar{
+    border: 1px solid black;
+}
+.avatar li{
+    list-style: none;
+    float: right;
+}
+.user-avatar{
+    width: 30px;
+}
+
+.avatar li a {
+    color: black;
+    font-weight: 600;
+}
 h4{
     color: brown;
 }
