--- a/NhapHang.css
+++ b/NhapHang.css
@@ -46,3 +46,28 @@ h4{
 .navba ul li a:hover{
     color: #000000;
 }
+#listShoes{
+    list-style: none;
+    
+}
+.img-responsive{
+    height: 100%;
+    width: 100%;
+    display: block;
+}
+#masp {
+    margin-top: -2px;
+    margin-bottom: 1rem;
+    margin-left: 26px;
+}
+#nameSP{
+    margin-top: -16px;
+    margin-left: 9px;
+    margin-bottom: .5rem;
+}
+.img-responsive ul li:hover{
+    height: 80%;
+    width: 80%;
+    
+    display: block;
+}
