--- a/QLSP.css
+++ b/QLSP.css
@@ -15,7 +15,9 @@ body{
 .user-avatar{
     width: 30px;
 }
-
+#active{
+    color: aqua;
+}
 .avatar li a {
     color: black;
     font-weight: 600;
