--- a/GianHang.css
+++ b/GianHang.css
@@ -47,6 +47,29 @@ h4{
     color: #000000;
 }
 
-#list{
+
+#listShoes{
     list-style: none;
+
 }
+.img-responsive{
+    height: 100%;
+    width: 100%;
+    display: block;
+}
+#masp {
+    margin-top: -2px;
+    margin-bottom: 1rem;
+    margin-left: 26px;
+}
+#nameSP{
+    margin-top: -16px;
+    margin-left: 9px;
+    margin-bottom: .5rem;
+}
+.img-responsive ul li:hover{
+    height: 80%;
+    width: 80%;
+
+    display: block;
+} 
